--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -93,7 +93,7 @@
             {% for blog in recentBlogs %}
           <div style="border-bottom:1px solid #e0e0e0;">
             <a href="/{{blog.shortUrl}}" style="text-decoration:none;" >
-              <p style="font-size:13px; font-weight:bold; cursor:pointer;"> <span>{{ forloop.counter }}. </span> <span> {{blog.title}} </span>  </p>
+              <p style="font-size:13px; font-weight:bold; cursor:pointer;"><span> {{blog.title}} </span>  </p>
             </a>
           </div>
           {% endfor %}
