--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -295,7 +295,7 @@
       <div class="col-md-10 col-md-offset-1 min_padd hd_screen">
         <div class="col-md-4">
           <div class="container-fluid pro_card">
-            <div class="course_card_img" style="background-image:url('/static/images/24tut/stu4.png')"></div>
+            <div class="course_card_img" style="background-image:url('/static/images/board_exams.jpg')"></div>
             <div class="col-md-10 text-center min_padd col-md-offset-1">
               <span class="pro_num">01</span>
               <span class="pro_head"> GREAT FOR BOARD EXAMS</span>
@@ -308,7 +308,7 @@
 
         <div class="col-md-4">
           <div class="container-fluid pro_card">
-            <div class="course_card_img" style="background-image:url('/static/images/24tut/group.jpg')"></div>
+            <div class="course_card_img" style="background-image:url('/static/images/class_room.jpg')"></div>
             <div class="col-md-10 text-center min_padd col-md-offset-1">
               <span class="pro_num">02</span>
               <span class="pro_head"> CLASS TRANING </span>
@@ -321,7 +321,7 @@
 
         <div class="col-md-4">
           <div class="container-fluid pro_card">
-            <div class="course_card_img" style="background-image:url('/static/images/24tut/grp.jpg')"></div>
+            <div class="course_card_img" style="background-image:url('/static/images/get_ahead.jpg')"></div>
             <div class="col-md-10 text-center min_padd col-md-offset-1">
               <span class="pro_num">03</span>
               <span class="pro_head"> BEAT THE CROWD </span>
@@ -356,7 +356,7 @@
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
           <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student3.png"  class="imgstyle" />
+            <img src="/static/images/24tut/ravi_kumar.jpg"  class="imgstyle" />
           </div>
           <div class="circle">
             <div><b>99%</b></div>
@@ -379,7 +379,7 @@
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
           <div class="col-md-5 studentcard" style="min-height:300px;">
-            <img src="/static/images/24tut/student2.png"  class="imgstyle" />
+            <img src="/static/images/24tut/shivani_gupta.png"  class="imgstyle" />
           </div>
           <div class="circle">
             <div><b>87%</b></div>
@@ -451,7 +451,7 @@
   </div>
 
 
-  <div class="container-fluid no_padding" style="min-height:20vh;">
+  <div class="container-fluid no_padding">
     <div class="col-md-12 no_padding">
       <div class="col-md-6 text-center" style="background-color:#6A7EF1;color:#fff;min-height:13vh;padding-top:40px;padding-bottom:15px;">
         <span class="title"> Learn at your own pace </span><br>
@@ -463,97 +463,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <div class="container-fluid no_padding" style="min-height:50vh;margin:20px auto;">
-    <div class="col-md-12 text-center">
-      <h1 class="heading_big">A New Era in Online Education</h1>
-      <h4 class="heading_small"> CASE STUDIES FOR YOU</h4>
-    </div>
-    <div class="col-md-10 col-md-offset-1 min_padd hd_screen">
-      <div class="col-md-6 min_padd">
-        <div class="container-fluid no_padding" style="position:relative;">
-          <img src="/static/images/24tut/blue.png" style="position:absolute;top:75px;left:-35px;" class="hidden-xs hidden-sm">
-          <img src="/static/images/24tut/liblue.png" style="position:absolute;top:-23px;right:59px;">
-          <div class="onplay" style="background-image: url('/static/images/24tut/tutbg.jpg');">
-            <div class="onplay_overlay" ng-click="playVideo()">
-              <span class="playerbtn">
-                <svg x="0" y="0" width="60px" height="60px" viewBox="0 0 200 200" class="play play--ripple">
-                  <circle fill="transparent" stroke="#02EBA3" stroke-width="0" cx="100" cy="100" r="96"></circle>
-                  <circle clip-path="url(#clipper)" fill="url(#ripple)" cx="100" cy="100" r="130"></circle>
-                  <polygon fill="#02EBA3" points="70.993,60.347 153.398,102.384 70.993,144.42   "></polygon>
-                </svg>
-                <svg x="0" y="0" width="0" height="0">
-                  <defs>
-                    <clipPath id="clipper">
-                      <circle cx="100" cy="100" r="93"></circle>
-                    </clipPath>
-                    <radialGradient id="ripple">
-                      <stop offset="0.681994" stop-color="#000" stop-opacity="0.45">
-                        <animate attributeName="offset" values="0;0.70" begin="0.2s" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                      <stop offset="0.0986606" stop-color="#02EBA3" stop-opacity="0.55">
-                        <animate attributeName="offset" values="0.05;0.75" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                      <stop offset="0.162564" stop-color="#000" stop-opacity="0.45">
-                        <animate attributeName="offset" values="0.10;1" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                    </radialGradient>
-                  </defs>
-                </svg>
-              </span>
-            </div>
-          </div>
-          <div class="min_padd">
-            <span>
-              <strong>eEducation as Interpretation</strong>
-            </span><br>
-            <span style="color:#02EBA3;">View Case Study</span><br>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 min_padd">
-        <div class="container-fluid no_padding" style="position:relative;">
-          <img src="/static/images/24tut/green.png" style="position:absolute;top:70px;left:-35px;" class="hidden-xs hidden-sm">
-          <img src="/static/images/24tut/orange.png" class="orng_img">
-          <div class="onplay" style="background-image: url('/static/images/24tut/img1.jpeg');">
-            <div class="onplay_overlay" ng-click="playVideo()">
-              <span class="playerbtn">
-                <svg x="0" y="0" width="60px" height="60px" viewBox="0 0 200 200" class="play play--ripple">
-                  <circle fill="transparent" stroke="#02EBA3" stroke-width="0" cx="100" cy="100" r="96"></circle>
-                  <circle clip-path="url(#clipper)" fill="url(#ripple)" cx="100" cy="100" r="130"></circle>
-                  <polygon fill="#02EBA3" points="70.993,60.347 153.398,102.384 70.993,144.42   "></polygon>
-                </svg>
-                <svg x="0" y="0" width="0" height="0">
-                  <defs>
-                    <clipPath id="clipper">
-                      <circle cx="100" cy="100" r="93"></circle>
-                    </clipPath>
-                    <radialGradient id="ripple">
-                      <stop offset="0.681994" stop-color="#000" stop-opacity="0.45">
-                        <animate attributeName="offset" values="0;0.70" begin="0.2s" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                      <stop offset="0.0986606" stop-color="#02EBA3" stop-opacity="0.55">
-                        <animate attributeName="offset" values="0.05;0.75" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                      <stop offset="0.162564" stop-color="#000" stop-opacity="0.45">
-                        <animate attributeName="offset" values="0.10;1" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
-                      </stop>
-                    </radialGradient>
-                  </defs>
-                </svg>
-              </span>
-            </div>
-          </div>
-          <div class="min_padd">
-            <span>
-              <strong>Creating a Better study Environment</strong>
-            </span><br>
-            <span style="color:#02EBA3;">View Case Study</span><br>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
   {% endverbatim %}
 
