--- a/homepage/templates/notFound404.html
+++ b/homepage/templates/notFound404.html
@@ -5,22 +5,21 @@
 
 
 
-<div class="row" style="padding-top: 2em;min-height:60vh;">
+<div class="row" style="padding-top: 6em;min-height:60vh;margin:0px;">
   <div class="col-md-6 text-center fof">
     <h1 style="padding-top: 2em;"><b>PAGE NOT FOUND !</b></h1>
     <div class="message-box">
-      <h2>Error 404 </h2></br>
       <h4>Sorry! That page dosen't seem to exist</h4>
       <div class="text-center">
         <div>
-          <a href=""><button class="btn_gradient " style="display:inline-block;">Go Back</button></a>
+          <a href="/"><button class="btn_gradient " style="display:inline-block;">Go Home</button></a>
         </div>
       </div>
     </div>
 
   </div>
   <div class="col-md-6 text-center" style="margin-top:3em;">
-     <img src="/static/images/24tut/404.jpg" style="width:400px;height:400px;"/>
+     <img src="/static/images/24tut/404.png" style="width:60%;"/>
 
   </div>
 
