--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -20,11 +20,9 @@
         <div class="container-fluid no_padding social_div">
           <span style="color: #fff;font-size: 1.4em;font-weight:bold;padding-right:20px;">Follow us on</span>
           <br class="hidden-lg hidden-md">
-          <i aria-hidden="true" class="social_links fa fa-facebook "></i>
-          <i aria-hidden="true" class="social_links fa fa-twitter"></i>
-          <i aria-hidden="true" class="social_links fa fa-google-plus "></i>
-          <i aria-hidden="true" class="social_links fa fa-instagram"></i>
-          <i aria-hidden="true" class="social_links fa fa-vimeo "></i>
+          <i aria-hidden="true" class="social_links fa fa-facebook " style="background:#0b208e;border:solid 2px #0b208e;"></i>
+          <i aria-hidden="true" class="social_links fa fa-twitter" style="background:#0094ff;solid 2px #0094ff;"></i>
+          <i aria-hidden="true" class="social_links fa fa-google-plus " style="background:#ff0000;solid 2px #ff0000;"></i>
         </div>
       </div>
     </div>
