--- a/homepage/templates/account.html
+++ b/homepage/templates/account.html
@@ -32,7 +32,7 @@
     {% verbatim %}
     <div class="{{device.name=='extralarge'?'col-md-9':'col-md-8'}}" style="padding-left:0px">
     {% endverbatim %}
-      <div class="row container-fluid" style="margin:8px 10px; background-color:#fff; border-radius:5px;">
+      <div class="row container-fluid" style="margin:8px 10px; background-color:#fff; border-radius:5px; padding-bottom:15px;">
         <div class="row text-center" style="border-bottom:1px solid #e0e0e0">
           <h3 style="font-weight:700; color:#414142">Balance</h3>
         </div>
@@ -78,8 +78,6 @@
                 </div>
               </div>
             </div>
-
-
           </div>
         </div>
 
@@ -114,11 +112,6 @@
               ADD MORE TIME
             </button>
           </div>
-
-        </div>
-
-        <div class="row">
-          row
         </div>
 
 
