--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -113,7 +113,7 @@
       <!-- <img src="" width="100%"style="z-index:-100;opacity:0.5;;left:0;top:0;"> -->
 
       <div class="col-md-2 mobileview">
-        <img src="/static/images/24tut/hcv.jpg" class="tb_image">
+        <img src="/media/{{book.dp}}" class="tb_image">
       </div>
       <div class="col-md-6 heading_24">
         <h1> {{sectionobj.title}} </h1>
