--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -19,7 +19,6 @@
             {% for c in subobj %}
             <li><a href="/class-{{c.level}}-{{c.title}}/">Class {{c.level}} {{c.title}}</a></li>
               {% endfor %}
-            {% verbatim %}
           </ul>
         </li>
         <!-- <li class="header_element">
@@ -49,13 +48,16 @@
           </ul>
         </li> -->
         <li class="header_element">
-          <a ng-if="me.pk ==  undefined" ng-click="signin()" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele"><i class="fa fa-key fa-fw" aria-hidden="true"></i> Sign in</a>
-          <a href="/account/" ng-if="me.pk" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele">{{me.username}} </a>
+          {% if request.user.is_authenticated %}
+            <a href="/account/" class="nav_ele">{{request.user.get_username}} </a>
+          {% endif %}
+          {% if  not request.user.is_authenticated %}
+            <a style="cursor:pointer;" ng-click="signin()" class="nav_ele"> Sign in</a>
+          {% endif %}
         </li>
 
       </ul>
     </div>
   </div>
 
-  {% endverbatim %}
 </nav>
