--- a/homepage/templates/exam.html
+++ b/homepage/templates/exam.html
@@ -4,6 +4,7 @@
 
 <script type="text/javascript">
   var QUESID = '{{id}}';
+  var USERID = '{{user}}';
 </script>
 {% verbatim %}
 <div class="container-fluid " ng-controller="exam">
